We have successfully edited the code to retrieve the video and save it into the uploads director, align with returning the video after the edits are done. Now we just have to do some tweaks to the ffmpeg editing commands

--- a/VidEdits/templates/editor.html
+++ b/VidEdits/templates/editor.html
@@ -133,15 +133,13 @@
                     "Content-Type": "application/json"
                 },
                 body: JSON.stringify({
-                    input_file: file,
                     output_video: "output_video.mp4",
                 })
             })
             .then(response => response.json())
             .then(data => {
-                document.getElementById("result").innerText = "Output Video: " + data.output_video;
-                file = data.output_video;
-                alert("Video has been successfully edited, thank you!");
+                answer = data.message;
+                alert(answer);
             })
             .catch(error => alert("Error:", error));
         }
@@ -153,16 +151,14 @@
                     "Content-Type": "application/json"
                 },
                 body: JSON.stringify({
-                    input_file: file,
                     output_video: "output_video.mp4",
                     speed: speedValue
                 })
             })
             .then(response => response.json())
             .then(data => {
-                document.getElementById("result").innerText = "Output Video: " + data.output_video;
-                file = data.output_video
-                alert("Video has been successfully edited, thank you!");
+                answer = data.message;
+                alert(answer);
             })
             .catch(error => alert("Error:", error));
         }
@@ -174,16 +170,14 @@
                     "Content-Type": "application/json"
                 },
                 body: JSON.stringify({
-                    input_file: file,
                     output_video: "output_video_brightness.mp4",
                     light: brightnessValue
                 })
             })
             .then(response => response.json())
             .then(data => {
-                document.getElementById("result").innerText = "Brightness adjusted. Output Video: " + data.output_video;
-                file = data.output_video
-                alert("Video brightness has been successfully adjusted.");
+                answer = data.message;
+                alert(answer);
             })
             .catch(error => alert("Error:", error));
         }
