Adding some comments to my web art project

--- a/WebArt/templates/EmbraceOfNature.html
+++ b/WebArt/templates/EmbraceOfNature.html
@@ -1,14 +1,18 @@
 {% extends "base.html" %}
 {% block title %} Immanuel{% endblock %}
 {% block content %}
+<!-- Sets the background color of the page to blue -->
 <body style="background-color:blue">
 <div style ="text-align: center">
+    <!-- The title of the art will be centered and have a  blueish background -->
 <h2 style="background-color: powderblue"><i>Embrace Of Nature</i></h2>
 </div>
+<!-- Used to load the embrace of nature video -->
 <div style="text-align: center">
     <video width="450" controls> <source src="static/Embrace of Nature.mp4" type="video/mp4">
       </video>
 </div>
+<!-- Here is the content and text regarding the project embrace of nature -->
 <h3><u>What is Embrace Of Nature</u></h3>
 <div style="text-align: center">
     <p><b>This project Embrace of Nature is meant to depict a peaceful nature environment, almost like how you see those disney princesses
