--- a/WebArt/templates/Immanuel.html
+++ b/WebArt/templates/Immanuel.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% block title %} Immanuel{% endblock %}
 {% block content %}
+<!-- Sets the background color of the page to blue -->
 <body style="background-color:blue">
 <div style ="text-align: center">
+    <!-- The title of the art will be centered and have a  blueish background -->
 <h2 style="background-color: powderblue"><i>Immanuel</i></h2>
 </div>
 <div style="text-align: center">
