--- a/WebArt/templates/base.html
+++ b/WebArt/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title%}{% endblock %}</title>
 </head>
+<!-- This style tag holds all the css styling for the art templates to use-->
 <style>
          body {
         background-color: #001f3f; /* Deep retro blue */
