made a few edits and comments to my webapp project

--- a/WebApp/templates/base.html
+++ b/WebApp/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title%}{% endblock %}</title>
 </head>
+<!-- Here is the css styling for our code that all the templates that are extended to this template can refer to -->
 <style>
         body {
             font-family: Arial, sans-serif;
