--- a/WebApp/templates/details.html
+++ b/WebApp/templates/details.html
@@ -2,8 +2,8 @@
 {% block title %} Details {% endblock %}
 
 {% block content %}
-<img src={{photo}} alt="Your Profile Picture"class="pic">
-<p>Your Email: {{zone}}</p>
+<img src={{photo}} alt="Your Profile Picture" class="pic" width="400">
+<p>Your Email: {{email}}</p>
 <p>Your Age: {{num}}</p>
 
 
