started creating an edit template that allows you to edit the information within your profile

--- a/WebApp/templates/create.html
+++ b/WebApp/templates/create.html
@@ -19,10 +19,10 @@
     <p><input type="text" name="ps" required></p>
     <p>Email: </p>
     <p><input type = "text" name = "em" required></p>
-    <p>Age: </p>
-    <p><input type = "number" name = "ag" required></p>
-    <p>Profile Picture: </p>
-    <p><input type ="file" name="png" accept ="image/*" required></p>
+    <p>Age (optional): </p>
+    <p><input type = "number" name = "ag" ></p>
+    <p>Profile Picture (optional): </p>
+    <p><input type ="file" name="png" accept ="image/*" ></p>
     <p><input type="submit" value="submit"></p>
 </form>
 {% endblock %}
