--- a/WebApp/templates/user.html
+++ b/WebApp/templates/user.html
@@ -19,4 +19,7 @@
 <a href="http://127.0.0.1:5000/details">
     <button type = "button">Check Details</button>
 </a>
+<a href="http://127.0.0.1:5000/edit">
+    <button type="button">Edit Profile</button>
+</a>
 {% endblock %}
