--- a/WebApp/templates/base.html
+++ b/WebApp/templates/base.html
@@ -6,6 +6,17 @@
 </head>
 <!-- Here is the css styling for our code that all the templates that are extended to this template can refer to -->
 <style>
+.image-text-container {
+    border: 1px solid #ccc;
+    padding: 15px;
+    width: 300px;
+    text-align: center;
+    border-radius: 10px;
+}
+.image-text-container img {
+    width: 100%;
+    border-radius: 8px;
+}
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -48,6 +59,9 @@
             margin: 0 auto; /* center horizontally */
             padding: 0 20px;
         }
+    .hide{
+        display: none;
+    }
 </style>
 <body>
     <h1>Miracle's Website</h1>
